--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,16 +1,6 @@
-html,
-body,
-#app {
-  margin: 0;
-  padding: 0;
-}
-
-.icon-btn {
-  @apply inline-block cursor-pointer select-none
-    opacity-75 transition duration-200 ease-in-out
-    hover:opacity-100 hover:text-teal-600;
-  font-size: 0.9em;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 ::-webkit-scrollbar {
   width: 8px;
