--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.icon-btn {
+  @apply transition hover:cursor-pointer active:scale-90;
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
